Fixes text alignment

--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,10 @@ body {
   width: 100vw;
 }
 #retailers {
+  margin-top: 5%;
   width: 90%;
-  padding-bottom: 10%;
 }
-.retailers-card {
-}
+
 .hero {
   background: url("placeholder.png");
   background-size: cover;
@@ -113,5 +112,4 @@ text */
 }
 .card {
   background-color: #f9f4f1 !important;
-  border: none;
 }
